Fixed (windows) vertical viewport overflow bug

--- a/css/prototype.css
+++ b/css/prototype.css
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  max-width: 100%;
 }
 
 h1, h2, h3, h4, button {
@@ -55,25 +56,14 @@ h1, h2, h3, h4, button {
   animation-fill-mode: forwards;
 }
 
-@keyframes destroyModal {
-  0%    { opacity: 1; filter: blur(0px);  }
-  99%   { opacity: 0; filter: blur(10px); visibility: visible; }
-  100%  { opacity: 0; filter: blur(10px); visibility: hidden; }
-}
-
-@keyframes destroyButton {
-  0%    { opacity: 1; filter: blur(0px); }
-  30%   { opacity: 0; filter: blur(10px); visibility: visible; }
-  100%  { opacity: 0; filter: blur(10px); visibility: hidden; }
-}
-
 body {
   font-family: "Ubuntu", sans-serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .app {
   display: flex;
-  /* height: 100vh; */
   width: 100vw;
 }
 
@@ -1044,4 +1034,16 @@ a[href$=".pdf"]::after {
   0%   { transform: scale(1);   }
   50%  { transform: scale(0.8); }
   100% { transform: scale(1);   }
+}
+
+@keyframes destroyModal {
+  0%    { opacity: 1; filter: blur(0px);  }
+  99%   { opacity: 0; filter: blur(10px); visibility: visible; }
+  100%  { opacity: 0; filter: blur(10px); visibility: hidden; }
+}
+
+@keyframes destroyButton {
+  0%    { opacity: 1; filter: blur(0px); }
+  30%   { opacity: 0; filter: blur(10px); visibility: visible; }
+  100%  { opacity: 0; filter: blur(10px); visibility: hidden; }
 }
